fix(tools): alignment
Replaces the use of StatusPage with nested Box and labels. It gives more control over alignment and doesn't trap scroll events

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -5,3 +5,7 @@
 .card-like {
   border-radius: 12px;
 }
+
+.compact-title {
+  font-size: 18pt;
+}
